# temporal-matching-demo

./: .coveragerc  .gitignore  Dockerfile  README.md  docker-compose.yml  example_data  main.py  pyproject.toml  requirements.txt  server.py  tox.ini
BooleanEntities/: Clause.py
LinkStream/: LinkStream.py
LinkStream/LinkStreamError/: InvalidLinkStreamError.py
app/: main.py
app/BooleanEntities/: Clause.py  Formula.py
app/LinkStream/: LinkStream.py  LinkStreamError.py
app/match_building/: match_building.py
frontend/: .eslintcache  Dockerfile  Dockerfile.dev  docker-build.sh  docker-compose.yml  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: api.tsx
frontend/src/components/: AssignmentForm.tsx  Board.tsx  ClauseInput.tsx  FormulaForm.tsx  Game.tsx  GammaForm.tsx  Graph.tsx  Header.tsx  MainTitle.tsx  SubmitButton.tsx  Window.tsx
frontend/src/frontend/: .eslintcache
frontend/src/functions/: Square.tsx
kubernetes/: deploy.sh  deployment.yaml  endpoint.yaml  ingress.yaml  service.yaml
kubernetes/charts/: index-cache.yaml
kubernetes/temporal-matching/: Chart.yaml  deploy.sh  uninstall.sh  values.yaml
kubernetes/temporal-matching/charts/: index-cache.yaml
kubernetes/temporal-matching/templates/: NOTES.txt  _helpers.tpl  service.yaml  serviceaccount.yaml
match_building/: match_building.py
test/: conftest.py  test_link_stream.py
test/test_cases/: expected_gamma_link_stream_1.txt  link_stream_1.txt  link_stream_2.txt  link_stream_gaps_1.txt  link_stream_t_not_incremental_1.txt
(+15 files in other folders)
